--- a/charts/tibco-developer-hub/templates/ingress_public_traefik.yaml
+++ b/charts/tibco-developer-hub/templates/ingress_public_traefik.yaml
@@ -43,6 +43,10 @@ spec:
       - X-Auth-Request-Access-Token
       - X-Atmosphere-Token
     trustForwardHeader: true
+    {{ if .Values.global.cp.authInsecureIngressController -}}
+    tls:
+      insecureSkipVerify: true
+    {{- end }}
 
 ---
 apiVersion: traefik.io/v1alpha1
