--- a/charts/tp-cp-tibcohub-contrib/values.yaml
+++ b/charts/tp-cp-tibcohub-contrib/values.yaml
@@ -7,7 +7,7 @@ source:
 tibcoHub:
   image:
     name: "dx-tibco-hub-cp-contrib"
-    tag: 133
+    tag: 161
     pullPolicy: IfNotPresent
 
 containerImageExtractor:
@@ -43,11 +43,35 @@ securityContext:
   # It specifies that privilege escalation is not allowed for security reasons.
   # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
   allowPrivilegeEscalation: false
+  readOnlyRootFilesystem: true
   capabilities:
     drop:
       - ALL
+      - CAP_NET_RAW
 
 # global values used by the chart. These values gets propagated to sub-charts.
 global:
   tibco:
     enableLogging: true
+
+scripts:
+  resources:
+    requests:
+      cpu: 50m
+      memory: 75Mi
+    limits:
+      cpu: 100m
+      memory: 150Mi
+
+probes:
+  startupProbe: {}
+  # enable startup probe only if security policy is blocking you from deployment, otherwise its not recommended to use it
+  #  exec:
+  #    command:
+  #    - touch
+  #    - /tmp/healthy
+  #  initialDelaySeconds: 5
+  #  periodSeconds: 5
+  #  failureThreshold: 5
+  #  successThreshold: 1
+  #  timeoutSeconds: 5
