--- a/charts/tp-cp-tibcohub-recipes/templates/tibcohub.yaml
+++ b/charts/tp-cp-tibcohub-recipes/templates/tibcohub.yaml
@@ -12,7 +12,7 @@ metadata:
 data:
   version.json: |
     {
-      "capabilityVersion": "1.3.0",
+      "capabilityVersion": "1.4.0",
       "minCPVersion": "1.1.0",
       "maxCPVersion": "",
       "releaseDate": {{ .Values.capabilities.tibcohub.releaseDate | quote }},
@@ -43,7 +43,7 @@ data:
           {
             "version": [
               1,
-              3,
+              4,
               0
             ],
             "capabilityId": "OAUTH2PROXY",
@@ -75,7 +75,7 @@ data:
     recipe:
       helmCharts:
       - name: tibco-developer-hub
-        version: 1.3.18
+        version: 1.4.21
         namespace: ${NAMESPACE}
         repository:
           chartMuseum:
@@ -92,7 +92,7 @@ data:
                   auth:
                     providers:
                       oauth2Proxy:
-                        development: {}
+                        production: {}
                     enableAuthProviders: [oauth2Proxy]
                 # only if user provides a secrets reference
                 # extraEnvVarsSecrets:
@@ -138,9 +138,17 @@ spec:
       - name: tibcohub
         image: {{ include "tp-cp-tibcohub-recipes.image.registry" .}}{{"/"}}{{ include "tp-cp-tibcohub-recipes.image.repository" .}}{{"/"}}{{ .Values.image.name }}:{{ .Values.image.tag}}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        {{- with .Values.probes.startupProbe }}
+        startupProbe:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
         {{- if .Values.securityContext }}
         securityContext:
-          {{- toYaml .Values.securityContext | nindent 10 }}
+        {{- toYaml .Values.securityContext | nindent 10 }}
+        {{- end }}
+        {{- if eq (include "tp-cp-tibcohub-recipes.enableResourceConstraints" . ) "true" }}
+        resources:
+        {{- toYaml .Values.scripts.resources | nindent 10 }}
         {{- end }}
         env:
         - name: CAPABILITY_NAME
@@ -150,7 +158,7 @@ spec:
         - name: RECIPE_TARGET_LOCATION
           value: "/private/tsc/config/capabilities/platform"
         - name: RECIPE_RELEASE_VERSION
-          value: "1.3.0"
+          value: "1.4.0"
         - name: SPACE_SEPARATED_UNSUPPORTED_RECIPE_VERSIONS
           value: ""
         - name: OVERWRITE_RECIPE
@@ -183,4 +191,3 @@ spec:
         {{- if (include "tp-cp-tibcohub-recipes.container-registry.secret" .) }}
         - name: {{ include "tp-cp-tibcohub-recipes.container-registry.secret" . }}
         {{- end}}
-      
