Fixed PLTDX-1467: Developer hub provisioning issue when there is a start in no_proxy value.

--- a/charts/tibco-developer-hub/templates/backstage-deployment.yaml
+++ b/charts/tibco-developer-hub/templates/backstage-deployment.yaml
@@ -215,7 +215,7 @@ spec:
             {{- end }}
             {{- if .noProxy }}
             - name: no_proxy
-              value: {{ .noProxy }}
+              value: {{ .noProxy | quote }}
             {{- end }}
             {{- end }}
           ports:
