--- a/charts/tibco-developer-hub/templates/ingress_public_nginx.yaml
+++ b/charts/tibco-developer-hub/templates/ingress_public_nginx.yaml
@@ -28,5 +28,5 @@ spec:
                 port:
                   number: {{ .Values.service.ports.backend }}
             path: {{ .Values.publicApi.ingress.config.pathPrefix }}
-            pathType: Prefix
+            pathType: ImplementationSpecific
 {{- end }}
