--- a/charts/dp-core-infrastructure/Chart.yaml
+++ b/charts/dp-core-infrastructure/Chart.yaml
@@ -23,7 +23,7 @@ dependencies:
 - condition: haproxy.enabled
   name: haproxy
   repository: ""
-  version: 1.43.0
+  version: 1.43.*
 description: A Helm chart for Data Plane Infrastructure
 name: dp-core-infrastructure
 type: application
