--- a/charts/tp-cp-core/charts/user-subscriptions/templates/cp-user-sub.yaml
+++ b/charts/tp-cp-core/charts/user-subscriptions/templates/cp-user-sub.yaml
@@ -445,7 +445,7 @@ spec:
     protocol: http
     proxies:
     - listener: virtual
-      config: empty
+      config: secure
       fqdn: ${TSC_DNS_DOMAIN}
       methods:
       - PUT
@@ -459,7 +459,7 @@ spec:
     protocol: http
     proxies:
       - listener: virtual
-        config: empty
+        config: secure
         fqdn: ${TSC_DNS_DOMAIN}
         methods:
           - GET
