--- a/charts/tp-cp-core/charts/web-server/values.yaml
+++ b/charts/tp-cp-core/charts/web-server/values.yaml
@@ -24,6 +24,7 @@ global:
         name: "common-distroless-base-debian-debug"
         tag: 12
     finops: "disable"
+    msg_dp_config_enabled: "true"
 
   # Pod Security Context configuration
   # This configuration ensures that the pod is run with non-root privileges for enhanced security.
