--- a/charts/tp-cp-core-finops/Chart.yaml
+++ b/charts/tp-cp-core-finops/Chart.yaml
@@ -1,16 +1,16 @@
 apiVersion: v2
-appVersion: 1.4.0
+appVersion: 1.5.0
 dependencies:
 - name: monitoring-service
-  version: 1.4.337
+  version: 1.5.412
 - name: finops-service
-  version: 1.4.99
+  version: 1.5.113
 - name: finops-prometheus
-  version: 1.4.77
+  version: 1.5.98
 - name: finops-web-server
-  version: 1.4.216
+  version: 1.5.265
 - name: finops-otel-collector
-  version: 1.4.7
+  version: 1.5.*
 description: A Helm chart for -- tp-cp-core-finops
 name: tp-cp-core-finops
-version: 1.4.512
+version: 1.5.543
